Tidy up assembler output, and rename all functions to 'x' SWIs.
The functions we're providing here are the X-variant of the SWIs,
rather than the error generating ones. So we name them appropriately.

--- a/templates/aarch64-api.s.j2
+++ b/templates/aarch64-api.s.j2
@@ -96,11 +96,11 @@
 // ############## {{ defmod.name }} interfaces #################################
 {%- for name, swi in defmod.interfaces.items()|sort %}
 
-.section .text.{{swi.name|lower}}
+.section .text.x{{swi.name|lower}}
 
-.global {{swi.name|lower}}
+.global x{{swi.name|lower}}
 
-{{swi.name|lower}}:
+x{{swi.name|lower}}:
 
 {#- Prepare the output registers, stripping invisible elements -#}
 {%- set ns = namespace(exitregs=[]) -%}
@@ -127,7 +127,8 @@
 {#- Entry sequence #}
     STP     x29, x30, [sp, #-16]!
 
-{%- if exitregs %}
+{%- if swi.outregs() %}
+
 // Prepare output registers
 {#- Prepare output registers #}
     SUB     sp, sp, #{{ (((exitregs|length) + 1) // 2) * 16 }}
@@ -137,8 +138,9 @@
 {%- endif %}
 
 {%- if swi.entry %}
+
 // Prepare input registers
-{# SWI input registers -#}
+{#- SWI input registers -#}
  {%- for inreg, regset in swi.inregs().items()|sort|reverse -%}
   {%- for reg in regset -%}
    {{ asm_regvalue_for_reg(defmod, reg, inreg) }}
@@ -157,9 +159,10 @@
     CSEL    x0, xzr, x0, VC
 {%- endif %}
 
-// Store output registers
 {#- SWI output registers -#}
-{%- if exitregs %}
+{%- if swi.outregs() %}
+
+// Store output registers
  {%- for outreg, reg in swi.outregs().items()|sort %}
     LDR     x10, [sp, #{{ 8 * loop.index0}}]
     STR     x{{reg.reg[1:]}}, [x10]                           // {{reg.name}}
@@ -175,6 +178,7 @@
 {%- if exitregs %}
     MOV     x0, x12
 {%- endif %}
+
     LDP     x29, x30, [sp], #16
     RET
 
