Fix for failure to set the frame pointer on each entry sequence.
The frame pointer wasn't being set on the entry to the function so
the aborts wouldn't report this frame properly.

--- a/templates/aarch64-api.s.j2
+++ b/templates/aarch64-api.s.j2
@@ -126,6 +126,7 @@ x{{swi.name|lower}}:
 
 {#- Entry sequence #}
     STP     x29, x30, [sp, #-16]!
+    MOV     x29, sp
 
 {%- if swi.outregs() %}
 
