Fix OSLib function naming.
The functions were named wrongly - I had just lower cased the names,
rather than inserting the underscores into the names.

--- a/templates/aarch64-api.s.j2
+++ b/templates/aarch64-api.s.j2
@@ -108,12 +108,12 @@
 // ############## {{ defmod.name }} interfaces #################################
 {%- for name, swi in defmod.interfaces.items()|sort %}
 
-.section .text.x{{swi.name|lower}}
+.section .text.x{{ oslib_swifunc(swi.name) }}
 
-.global x{{swi.name|lower}}
+.global x{{ oslib_swifunc(swi.name) }}
 
-    signature x{{swi.name|lower}}
-x{{swi.name|lower}}:
+    signature x{{ oslib_swifunc(swi.name) }}
+x{{ oslib_swifunc(swi.name) }}:
 
 {#- Prepare the output registers, stripping invisible elements -#}
 {%- set ns = namespace(exitregs=[]) -%}
