Update API decoding to handle comments better.
Comments aren't really handled well in the parser at the moment, but
we do now strip them if they are encountered.

--- a/templates/aarch64-api.s.j2
+++ b/templates/aarch64-api.s.j2
@@ -27,6 +27,9 @@
 {%- if value in defmod.constants -%}
 {%- set value = defmod.constants.get(value).value -%}
 {%- endif -%}
+{%- if value is iterable -%}
+{%- set value = value[0] -%}
+{%- endif -%}
 {%- if value < 65536 or (value % 65536) == 0 -%}
     MOV     x{{regnum}}, #{{value}}
 {%- else -%}
