Fix for stupid bug with the wrong register checked for spilling.
The ABI spilled registers were not being checked properly for input,
which caused some of the ColourTrans calls to fail. Should now be
correct though!

This will be re-tagged as I'd only just done the release and then
found the bug.

--- a/templates/aarch64-api.s.j2
+++ b/templates/aarch64-api.s.j2
@@ -74,7 +74,7 @@
      {%- endif -%}
     {%- endif -%}
    {%- endif -%}
-  {%- elif reg.reg[1:]|int > 7 %}
+  {%- elif inreg > 7 %}
     LDR     x{{inreg}}, [x29, #16 + {{ inreg - 8 }} * 8]  // arg {{ inreg }} on caller stack
   {%- elif reg.reg[1:]|int == inreg %}
     // x{{inreg}} = {{ reg.name }}
